# gnutrition

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  README  README.md  autogen.sh  build_db.sh  configure.ac  gnutrition.desktop  missing  py-compile  run-gnutrition.py  version.sh
data/: Makefile
debian/: Makefile
doc/: gnutrition.aux  gnutrition.cps  gnutrition.info  gnutrition.texi  gnutrition.toc  version.texi
man/: gnutrition.1
pixmaps/: Makefile
rpm/: Makefile  remove_prefix.py
src/: Makefile  Makefile.in  base_win.py  base_win_ui.py  budget.c  budget.h  config.py  database.py  date_widget.py  db.c  db.h  dbus.c  dbus.h  druid.py  druid_ui.py  file_select_dlg.py  food_edit_dlg.py  food_edit_dlg_ui.py  food_srch_dlg.py  food_srch_dlg_ui.py  food_srch_res_dlg.py  food_srch_res_dlg_ui.py  food_win.py  food_win_ui.py  gnutr.py  gnutr_stock.py  gnutr_widgets.py  gui.c  gui.h  gui_main.c  help.py  i18n.h  install.py  install.py.in  log.c  log.h  main.c  mysql.py  nutr_composition_dlg.py  nutr_composition_dlg_ui.py  (+24 more)
src/util/: Makefile  Makefile.in  exception.py  log.py  utility.py
src/util/test/: exception.py  intrange.py  log_levels.py  validate_file.py
